# c-parser

./: .gitignore  CMakeLists.txt  README.md
include/analysis/: Preprocessor.hpp
include/lexer/: Lexer.hpp  Token.hpp
include/parser/: AST.hpp  Environment.hpp  HTMLVisitor.hpp  JsonExportVisitor.hpp  Node.hpp  Parser.hpp  ParserException.hpp  ParserIncludes.hpp  PrintVisitor.hpp  SymbolTable.hpp  TreeVisitor.hpp  Visitor.hpp
include/parser/AST/: ArraySpecifierNode.hpp  BlockNode.hpp  FunctionDefinitionNode.hpp  IdentifierNode.hpp  ParameterNode.hpp  ProgramNode.hpp  TypeNode.hpp
include/parser/AST/declaration/: DeclarationNode.hpp  FunctionDeclarationNode.hpp  VariableDeclarationNode.hpp
include/parser/AST/expression/: ArrayInitializerNode.hpp  BinaryExpressionNode.hpp  ExpressionNode.hpp  FunctionCallExpressionNode.hpp  FunctionCallNode.hpp  LiteralNode.hpp  UnaryExpressionNode.hpp  VariableReferenceNode.hpp
include/parser/AST/expression/literal/: CharLiteralNode.hpp  FloatLiteralNode.hpp  IntegerLiteralNode.hpp  LiteralNode.hpp  StringLiteralNode.hpp
include/parser/AST/statement/: AssignmentStatementNode.hpp  ForNode.hpp  FunctionCallStatementNode.hpp  FunctionDeclarationNode.hpp  FunctionDefinitionNode.hpp  IfNode.hpp  ReturnNode.hpp  StatementNode.hpp  VariableDeclarationNode.hpp  VariableDefinitionNode.hpp  WhileNode.hpp
include/parser/AST/statement/declaration/: DeclarationNode.hpp  FunctionDeclarationNode.hpp  VariableDeclarationNode.hpp
src/: main.cpp
src/analysis/: Preprocessor.cpp
src/lexer/: Lexer.cpp  Token.cpp
src/parser/: AST.cpp  Environment.cpp  HTMLVisitor.cpp  JsonExportVisitor.cpp  Node.cpp  Parser.cpp  ParserException.cpp  Parser_Expressions.cpp  Parser_Statements.cpp  PrintVisitor.cpp  SymbolTable.cpp  TreeVisitor.cpp
src/parser/AST/: ArraySpecifierNode.cpp  BlockNode.cpp  FunctionDefinitionNode.cpp  IdentifierNode.cpp  ParameterNode.cpp  ProgramNode.cpp  TypeNode.cpp
src/parser/AST/declaration/: DeclarationNode.cpp  FunctionDeclarationNode.cpp  VariableDeclarationNode.cpp
src/parser/AST/expression/: ArrayInitializerNode.cpp  BinaryExpressionNode.cpp  ExpressionNode.cpp  FunctionCallExpressionNode.cpp  FunctionCallNode.cpp  LiteralNode.cpp  UnaryExpressionNode.cpp  VariableReferenceNode.cpp
src/parser/AST/expression/literal/: CharLiteralNode.cpp  FloatLiteralNode.cpp  IntegerLiteralNode.cpp  LiteralNode.cpp  StringLIteralNode.cpp
src/parser/AST/statement/: AssignmentStatementNode.cpp  ForNode.cpp  FunctionCallStatementNode.cpp  FunctionDeclarationNode.cpp  FunctionDefinitionNode.cpp  IfNode.cpp  ReturnNode.cpp  StatementNode.cpp  VariableDeclarationNode.cpp  VariableDefinitionNode.cpp  WhileNode.cpp
src/parser/AST/statement/declaration/: DeclarationNode.cpp  FunctionDeclarationNode.cpp  VariableDeclarationNode.cpp
tests/: ASTTest.cpp  JSONTestSuite.cpp  LexerTest.cpp  LexerTestSuite.cpp  ParserTestSuite.cpp  PointerTestSuite.cpp  TestSuite.hpp  test.c
tests/JSON/input/: basic.c  hello.c
tests/lexer/: basic.c  control.c
tests/lexer_input/: control.c  function.c
tests/parser/: array.c  for_loop.c  if_else.c  pointer.c  while_loop.c
tests/parser/pointers/: dereference_null.c  dereferencing.c  misuse_of_operators.c  pointer.c  pointer_arithmetic.c  pointer_comparisons.c  pointers_in_expressions.c
tests/parser_input/: for_loop.c  if_else.c
tests/parser_input/pointers/: array_of_pointers.c  basic_pointer_declarations.c  complex_declarations.c  complex_dereferencing.c  dereference_uninitialized.c  pass_pointer.c  pointer_and_arrays.c  pointer_initializations.c  pointer_to_pointer.c  return_pointer.c  void_pointers.c
web/: index.html  main.js  main.wasm  package-lock.json  package.json
web/src/: App.jsx  index.css
web/src/styles/: App.css
